frontend/test/should_pass/edge_017.grg
using edge_model_008;
