frontend/test/should_fail/computations_no_procmethod_method.grg
using computations_no_procmethod_method;
